--- a/teste.html
+++ b/teste.html
@@ -78,19 +78,17 @@
 </head>
 <body>
     <div class="form-container">
-        <center><img src="img/shizload-BTC-sale.png" loading="lazy" alt=""class="feature-image"></center>
-        <h2 class="text-center mb-4">RECURRING CRYPTO SAVINGS</h2>
-        <p class="text-center mb-4">Join our recurring crypto savings program and effortlessly stack your favorite crypto straight to your personal cold storage address! Simply make your payments in USD, and every 60 days after each payment, we’ll convert your funds to BTC and send them directly to your wallet—secure, simple, and built for the long haul.</p>
+        <h2 class="text-center mb-4">Recurring BTC Savings</h2>
+        <p class="text-center mb-4">Join our recurring BTC savings program and effortlessly stack Bitcoin straight to your personal BTC address! Simply make your payments in USD, and every 60 days after each payment, we’ll convert your funds to BTC and send them directly to your wallet—secure, simple, and built for the long haul.</p>
         <form method="post" action="https://forms.un-static.com/forms/20498b1a2650cc2e25d22b39d309bac55c735de6" id="btc-form">
             <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" class="form-control" placeholder="Enter your name"
+                <label for="name" class="required">Name</label>
+                <input type="text" id="name" name="name" class="form-control" placeholder="Enter your name" required>
             </div>
             <div class="form-group">
                 <label for="email" class="required">Email</label>
                 <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email" required>
             </div>
-            <!-- Crypto Selection Dropdown -->
             <div class="form-group">
                 <label for="crypto_type" class="required">Cryptocurrency</label>
                 <select id="crypto_type" name="crypto_type" class="form-control" required>
@@ -111,14 +109,29 @@
                     <option value="BONK">BONK</option>
                 </select>
             </div>
-            <!-- Crypto Address Field -->
             <div class="form-group">
                 <label for="crypto_address" class="required" id="crypto_address_label">Enter BTC Address</label>
                 <input type="text" id="crypto_address" name="crypto_address" class="form-control" placeholder="Enter BTC address" required>
             </div>
             <div class="form-group">
                 <label for="amount" class="required">Contribution Amount (USD)</label>
-                <input type="number" id="amount" name="amount" class="form-control" placeholder="Enter amount in USD" min="0.01" step="0.01" required>
+                <select id="amount" name="amount" class="form-control" required>
+                    <option value="5">$5</option>
+                    <option value="10">$10</option>
+                    <option value="20">$20</option>
+                    <option value="40">$40</option>
+                    <option value="80">$80</option>
+                    <option value="100">$100</option>
+                    <option value="150">$150</option>
+                    <option value="200">$200</option>
+                    <option value="300">$300</option>
+                    <option value="400">$400</option>
+                    <option value="800">$800</option>
+                    <option value="1000">$1000</option>
+                    <option value="2000">$2000</option>
+                    <option value="5000">$5000</option>
+                    <option value="10000">$10000</option>
+                </select>
             </div>
             <div class="form-group">
                 <label for="recurrence">Recurrence Frequency</label>
@@ -150,14 +163,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         $(document).ready(function() {
-            // Update crypto address label and placeholder based on selection
+            // Update crypto address label and placeholder
             $("#crypto_type").on("change", function() {
                 const selectedCrypto = $(this).val();
                 $("#crypto_address_label").text(`Enter ${selectedCrypto} Address`);
                 $("#crypto_address").attr("placeholder", `Enter ${selectedCrypto} address`);
             });
 
-            // Log submission for debugging
+            // Update form action based on amount (client-side for now)
+            $("#amount").on("change", function() {
+                const selectedAmount = $(this).val();
+                // For now, all submit to Un-static; $5 redirects to PayPal server-side
+                $("#btc-form").attr("action", "https://forms.un-static.com/forms/20498b1a2650cc2e25d22b39d309bac55c735de6");
+            });
+
+            // Log submission for verification
             $("#btc-form").on("submit", function(e) {
                 console.log("Submitting form to: " + this.action);
                 console.log({
@@ -169,6 +189,9 @@
                     recurrence: $("#recurrence").val(),
                     day_of_week: $("#day_of_week").val()
                 });
+                if ($("#amount").val() === "5") {
+                    console.log("After Un-static confirmation, expect redirect to: https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-93W19093VB403145GM6N6HZY");
+                }
             });
         });
     </script>
